--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "better-scroll": "^2.3.1",
     "core-js": "^3.13.1",
     "vue": "^2.6.13",
     "vue-router": "^3.5.1",
