--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^0.21.1",
     "better-scroll": "^2.3.1",
     "core-js": "^3.13.1",
+    "swiper": "^5.4.5",
     "vue": "^2.6.13",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.5.1",
     "vue-template-compiler": "^2.6.13"
   },
@@ -23,7 +25,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^7.10.0",
-    "vue-loader-v16": "^16.0.0-beta.5.4"
+    "vue-loader-v16": "^16.0.0-beta.5.4",
+    "webpack": "^4.0.0"
   },
   "eslintConfig": {
     "root": true,
